# intime

./: .env.example  .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.in  requirements.txt
.sqlx/: query-01e09d8d022838eaa3eafe0e8eed706d8adc951f2496e62ae4e052c965aaba30.json  query-05b83860381bfa370e0b047b28895cacb2caec883fdbfa15c610d10970584e1c.json  query-0dcd6697944337028487f6302435593e8af5cf38d4a46ba0b0702d81f54f1de7.json  query-0de3b359157adab504f4d86900108e229c597fecc28063a74c202aafa90fde62.json  query-0ea60930a93e43735d1137be290daab7793ed27a7deded01323e5a86300b1b3c.json  query-1e743d1f56e88bf85cafb11a9ec9b427bc6aca0358404101fff40411f7ced98e.json  query-29b61e8ab26edbc89b378ba6df871559f31b70886a2023c332269c1605f66db2.json  query-abf2dc627db5e718f0be52349e475b9c1a5e9ec41308d56ab57d3da38c11fda3.json  query-cf294f313a1282c522f424bc2ccab46809221df84674b7391b0c7e353f02982f.json
alembic/: env.py
alembic/versions/: 79ffeb968444_initial_tables.py
crates/core/: Cargo.toml
crates/core/src/: lib.rs  main.rs
crates/core/src/config/: mod.rs
crates/src-tauri/: Cargo.toml  tauri.conf.json
crates/src-tauri/src/: lib.rs
ds/: window_info_13913591-f140-415b-9620-e806d16524e0.json  window_info_204939f3-e1a4-48bd-9074-8137ebe0731b.json  window_info_21948652-f761-43eb-8f3b-5f8a84447d5d.json  window_info_39fc02c9-8667-4ac9-af34-f400339de1a9.json  window_info_559ac0b0-7563-43f5-925b-45725e79a141.json  window_info_78c75b9f-03e0-4c56-99a0-2b37bc5ae27c.json  window_info_bcec5bf6-9607-4d1e-ab7d-d93da88c1dc9.json  window_info_dbaa84bd-2953-4c41-98eb-c623ca46ec5d.json  window_info_e3c4009f-a256-4f22-87dc-0dbc171b426f.json
libs/app_inspect/: pyproject.toml  requirements.in
libs/base/: pyproject.toml  requirements.txt
libs/base/src/base_module/windows/: app_info.py
libs/core/: pyproject.toml
migrations/: 20250701001727_initial.down.sql  20250701001727_initial.sql  20250701001727_initial.up.sql  20250803223705_screenshot.down.sql  20250803223705_screenshot.up.sql  20250809004500_indices.down.sql  20250809004500_indices.up.sql
projects/app/: pyproject.toml
projects/core/: pyproject.toml  requirements.in  requirements.txt
projects/tracker/: pyproject.toml  requirements.in  requirements.txt
projects/tracker/src/tracker/: __main__.py
src/: lib.rs  main.rs
src/core/: events.rs  window_processor.rs
src/db/: crud.rs  pool.rs
src/models/: mod.rs
src/platform/: mod.rs
src/platform/win/: screenshot.rs  tracker.rs
src/tracker/: mod.rs
www/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
www/src/: App.tsx  style.css
www/src/components/: AppUsageList.tsx  Timeline.tsx  TimelineItem.tsx  WindowUsageTable.tsx
www/src/state/: selection.tsx
www/src/styles/: index.css
(+13 files in other folders)
