[package]
name = "intime"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
] }
scopeguard = "1.2"
tokio = { version = "1.44", features = ["full"] }
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
dotenv = "0.15"
config = { version = "0.15.11" }
lazy_static = "1.4.0"

[dev-dependencies]
sqlx-cli = { version = "0.8.6", features = ["sqlite"] }
