[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "base_module"
version = "0.1.0"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }

[tool.setuptools]
package-dir = { "" = "src" }
# packages = ["base_module"]
