[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tracker"
version = "0.1.0"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.uv]
package = true

[project.scripts]
tracker = "tracker.__main__:main"
